chore: update tsconfig.app.json and tsconfig.json

--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -33,6 +33,9 @@
 
 {
   "compilerOptions": {
+    "jsx": "react-jsx",
+    "esModuleInterop": true,
+
     // ...
     "baseUrl": ".",
     "paths": {
