--- a/backend/package.json
+++ b/backend/package.json
@@ -12,8 +12,10 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
+    "csv-parse": "^5.6.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "franc-min": "^6.2.0",
     "mongoose": "^8.16.0"
   },
   "devDependencies": {
