--- a/backend/package.json
+++ b/backend/package.json
@@ -16,11 +16,13 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "franc-min": "^6.2.0",
-    "mongoose": "^8.16.0"
+    "mongoose": "^8.16.0",
+    "multer": "^2.0.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/multer": "^1.4.13",
     "@types/node": "^24.0.4",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
