--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -25,7 +25,7 @@
   ],
   "compilerOptions": {
     "jsx": "react-jsx",
-
+    "resolveJsonModule": true,
     "esModuleInterop": true,
     "baseUrl": ".",
     "paths": {
